@@ -22,6 +22,9 @@
 	  Insert absolute paths for the database location ($libdir) in the
 	  "inplace" installation.
 
+	* lib/Foomatic/DB.pm: Improved header text of the PPD files:
+	  GPL, Foomatic 2.9 URL, "foomatic-rip", download instructions.
+	
 	* foomatic-configure.in: Used path from Defaults.pm for calls of
 	  "foomatic-rip" when generating PDQ driver files.
 
